@@ -62,6 +62,7 @@ ssize_t  ee_mwrite_buf(e_mem_t *mbuf, off_t to_addr, const void *buf, size_t siz
 int      ee_reset_core(e_epiphany_t *dev, unsigned row, unsigned col);
 int      ee_reset_group(e_epiphany_t *dev, unsigned row, unsigned col, unsigned rows, unsigned cols);
 int      ee_start_group(e_epiphany_t *dev, unsigned row, unsigned col, unsigned rows, unsigned cols);
+int      ee_soft_reset_core(e_epiphany_t *dev, unsigned row, unsigned col);
 
 
 ////////////////////
